make sure bottom of page is not cut off

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -1,6 +1,5 @@
 html {
     height: 100%;
-    overflow: hidden;
 }
 body {
     margin: 0;
@@ -15,7 +14,9 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;
+    height: fit-content;
+    min-height: 100vh;
+    overflow-x: hidden;
     background-color: #000;
     gap: 4rem;
 }
